# flask-api-users

./: .dockerignore  .editorconfig  .env-example  .gitignore  Dockerfile  Dockerfile-prd  Jenkinsfile  Makefile  README.md  __version__.py  application.py  boot.sh  config.py  docker-compose.yaml  fabfile.py  gunicorn_settings.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py
.docker/: dev.env  test.env
.docker/graylog/: dev.env
apps/: __init__.py  api.py  app.py  db.py  jwt.py  messages.py  rabbit.py  responses.py  sentry.py
apps/auth/: commands.py  exceptions.py  resources.py  schemas.py  use_case.py
apps/events/: user_created.py
apps/extensions/: api.py  config.py  db.py  jwt.py  logging.py  messages.py  responses.py
apps/services/: signup.py
apps/users/: commands.py  exceptions.py  models.py  repositories.py  resources.py  resources_admin.py  schemas.py  use_case.py  utils.py
confs/: gunicorn_api_users.conf.py  nginx_api_users.conf  nginx_api_users_https.conf  supervisor_api_users.conf
requirements/: base.txt  dev.txt  test.txt
static/: Insomnia_2023-05-11.json
tests/: conftest.py
tests/auth/: test_resources.py
tests/factories/: users.py
tests/home/: test_home.py
tests/messages/: test_messages.py
tests/responses/: test_responses.py
tests/responses.py/: test_responses.py
tests/users/: test_admin_user_by_cpf.py  test_admin_user_page_list.py  test_check_password_in_signup.py  test_cpf.py  test_generate_password.py  test_models.py  test_repositories.py  test_resources.py
